k8s/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-service
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: posts-service
  template:
    metadata:
      labels:
        app: posts-service
    spec:
      containers:
        - name: posts-service
          image: 482112969780.dkr.ecr.us-east-2.amazonaws.com/posts-service:latest
          ports:
            - containerPort: 8002
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service
  namespace: app
spec:
  selector:
    app: posts-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
